--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,9 +34,21 @@
         android:background="#09fc76"
         android:layout_centerInParent="true"
         android:textSize="50dp"
-        android:textAppearance="#cc0e0e"
         android:textIsSelectable="true"
         android:typeface="normal"
         android:capitalize="words"
         android:contextClickable="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_below="@+id/textView"
+        android:layout_alignLeft="@+id/textView"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginTop="47dp"
+        android:background="#e41a1a"
+        android:onClick="clickFunction" />
+
 </RelativeLayout>
